test/SPI/spi_client.code
/// Check an SPI import of an SPI library to detect correct SPI access

// RUN: %empty-directory(%t)

// /// Compile the SPI lib
// RUN: %target-language-frontend -emit-module %S/Inputs/spi_helper.code -module-name SPIHelper -emit-module-path %t/SPIHelper.codemodule -emit-module-interface-path %t/SPIHelper.codeinterface -emit-private-module-interface-path %t/SPIHelper.private.codeinterface -enable-library-evolution -language-version 5 -parse-as-library

/// Reading from languagemodule
// RUN: %target-typecheck-verify-language -I %t -verify-ignore-unknown

/// Reading from .private.codeinterface
// RUN: rm %t/SPIHelper.codemodule
// RUN: %target-typecheck-verify-language -I %t -verify-ignore-unknown

//// Reading from .codeinterface should fail as it won't find the decls
// RUN: rm %t/SPIHelper.private.codeinterface
// RUN: not %target-language-frontend -typecheck -I %t

@_spi(HelperSPI) import SPIHelper

// Use as SPI
publicFunc()
spiFunc()
internalFunc() // expected-error {{cannot find 'internalFunc' in scope}}

immutable c = SPIClass()
c.spiMethod()
c.spiVar = "write"
print(c.spiVar)

var s = SPIStruct()
s.spiMethod()
s.spiInherit()
s.spiDontInherit() // expected-error {{'spiDontInherit' is inaccessible due to '@_spi' protection level}}
s.spiExtensionHidden()
s.spiExtension()
s.spiExtensionInherited()
s.spiVar = "write"
print(s.spiVar)

SPIEnum().spiMethod()
SPIEnum.A.spiMethod()
_ = PublicEnum.spiCase

var ps = PublicStruct()
immutable _ = PublicStruct(alt_init: 1)
ps.spiMethod()
ps.spiVar = "write"
print(ps.spiVar)

otherApiFunc() // expected-error {{cannot find 'otherApiFunc' in scope}}

public fn publicUseOfSPI(param: SPIClass) -> SPIClass {} // expected-error 2{{cannot use class 'SPIClass' here; it is an SPI imported from 'SPIHelper'}}
public fn publicUseOfSPI2() -> [SPIClass] {} // expected-error {{cannot use class 'SPIClass' here; it is an SPI imported from 'SPIHelper'}}

@inlinable
public fn inlinable1() -> SPIClass { // expected-error {{class 'SPIClass' cannot be used in an '@inlinable' function because it is an SPI imported from 'SPIHelper'}}
  spiFunc() // expected-error {{global function 'spiFunc()' cannot be used in an '@inlinable' function because it is an SPI imported from 'SPIHelper'}}
  _ = SPIClass() // expected-error {{class 'SPIClass' cannot be used in an '@inlinable' function because it is an SPI imported from 'SPIHelper'}}
  // expected-error@-1 {{initializer 'init()' cannot be used in an '@inlinable' function because it is an SPI imported from 'SPIHelper'}}
  _ = [SPIClass]() // expected-error {{class 'SPIClass' cannot be used in an '@inlinable' function because it is an SPI imported from 'SPIHelper'}}
}

@_spi(S)
@inlinable
public fn inlinable2() -> SPIClass {
  spiFunc()
  _ = SPIClass()
  _ = [SPIClass]()
}
